<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        android:paddingBottom="?android:attr/actionBarSize">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/text_input_layout_email"
                style="@style/Login.EditText"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:hint="@string/email_title"
                app:layout_constraintEnd_toStartOf="@+id/guideline_end"
                app:layout_constraintStart_toStartOf="@+id/guideline_start"
                app:layout_constraintTop_toTopOf="parent">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/text_input_edit_text_email"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:inputType="textEmailAddress" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/text_input_layout_password"
                style="@style/Login.EditText"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:hint="@string/password_title"
                app:endIconMode="password_toggle"
                app:layout_constraintEnd_toStartOf="@+id/guideline_end"
                app:layout_constraintStart_toStartOf="@+id/guideline_start"
                app:layout_constraintTop_toBottomOf="@id/text_input_layout_email">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/text_input_edit_text_password"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:inputType="textPassword" />

            </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:id="@+id/button_login"
                style="@style/News.List.Tag.Bold"
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:layout_marginTop="16dp"
                android:text="@string/log_in_title"
                android:textAllCaps="false"
                app:layout_constraintEnd_toStartOf="@+id/guideline_end"
                app:layout_constraintStart_toStartOf="@+id/guideline_start"
                app:layout_constraintTop_toBottomOf="@+id/text_input_layout_password" />

            <View
                android:layout_width="0dp"
                android:layout_height="2dp"
                android:layout_marginEnd="8dp"
                android:background="@color/grey"
                app:layout_constraintBottom_toBottomOf="@+id/text_view_optional_login"
                app:layout_constraintEnd_toStartOf="@+id/text_view_optional_login"
                app:layout_constraintStart_toStartOf="@+id/guideline_start"
                app:layout_constraintTop_toTopOf="@+id/text_view_optional_login" />

            <TextView
                android:id="@+id/text_view_optional_login"
                style="@style/News.List.Tag.Black"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                android:text="@string/optional_login_title"
                app:layout_constraintEnd_toStartOf="@+id/guideline_end"
                app:layout_constraintStart_toStartOf="@+id/guideline_start"
                app:layout_constraintTop_toBottomOf="@+id/button_login" />

            <View
                android:layout_width="0dp"
                android:layout_height="2dp"
                android:layout_marginStart="8dp"
                android:background="@color/grey"
                app:layout_constraintBottom_toBottomOf="@+id/text_view_optional_login"
                app:layout_constraintEnd_toStartOf="@+id/guideline_end"
                app:layout_constraintStart_toEndOf="@+id/text_view_optional_login"
                app:layout_constraintTop_toTopOf="@+id/text_view_optional_login" />

            <include
                android:id="@+id/layout_social_media"
                layout="@layout/layout_social_media_button"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                app:layout_constraintEnd_toStartOf="@+id/guideline_end"
                app:layout_constraintStart_toStartOf="@+id/guideline_start"
                app:layout_constraintTop_toBottomOf="@+id/text_view_optional_login" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guideline_start"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_begin="8dp" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guideline_end"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_end="8dp" />

            <LinearLayout
                android:id="@+id/linear_layout_register"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/grey"
                android:gravity="center"
                android:orientation="horizontal"
                app:layout_constraintBottom_toBottomOf="parent">

                <TextView
                    android:id="@+id/text_view_register"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="16dp"
                    android:layout_marginEnd="4dp"
                    android:layout_marginBottom="16dp"
                    android:text="@string/register_title" />

                <TextView
                    android:id="@+id/text_view_to_register"
                    style="@style/News.List.Tag.Black.Bold"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/register_now_title"
                    android:textColor="@color/colorPrimary" />

            </LinearLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>

</layout>